added happy text

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@ Copyright
 whatever
 -->
 <head>
-	<title>SIMPLE WEB</title>
+	<title>HAPPY SIMPLE WEB</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
